# agent-kit-admin

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/server/: .env.example  Dockerfile  pyproject.toml  test.db  test_e2e.db
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_initial.py  002_add_search_indexes.py  003_add_webhooks_table.py  004_add_team_invites_pending_transfers_settings.py  005_add_category_manifest_deps_deprecation_reason.py
apps/server/app/: cli.py  config.py  database.py  errors.py  main.py
apps/server/app/api/: admin.py  auth.py  deps.py  packages.py  reviews.py  teams.py  versions.py  webhooks.py
apps/server/app/core/: security.py
apps/server/app/models/: __init__.py  (+9 more)
apps/server/tests/: conftest.py  helpers.py  test_admin_packages.py  test_admin_users.py  test_api_key_auth.py  test_api_key_service.py  test_api_keys.py  test_apikey_flush.py  test_auth.py  test_batch.py  test_dependency.py  test_e2e_journey.py  test_health.py  test_integration.py  test_iteration4.py  test_iteration4_todos.py  test_leave_team.py  test_local_auth.py  test_login_rate_limit.py  test_package_stats.py  test_packages.py  test_rate_limit.py  test_reviews.py  test_security.py  test_storage_service.py  test_team.py  test_team_api.py  test_team_packages.py  test_team_phase1.py  test_transfer.py  test_uninstall_team_package.py  test_username_auto.py  test_versions.py  test_visibility.py  test_webhook.py  test_webhook_service.py  test_workspace_isolation.py
(+544 files in other folders)
